# movieinator

./: .env  .gitignore  Cargo.toml  README.md  build.rs  setup.sh
completions/: _movienator.sh
src/: cli.rs  main.rs  movie.rs  movie_db.rs
